<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#FFF3E0"

        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardID"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            >



            <Button
                android:id="@+id/deleteDataButton"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_marginTop="28dp"

                android:layout_marginEnd="40dp"

                android:drawableLeft="@drawable/ic_baseline_delete_outline_24"
                android:text="Delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datetext" />

            <Button
                android:id="@+id/editDataButton"

                android:layout_width="wrap_content"
               android:layout_height="wrap_content"

                android:layout_marginEnd="24dp"

                android:drawableLeft="@drawable/ic_outline_edit_24"
                android:text="Edit"
                app:layout_constraintBottom_toBottomOf="@+id/deleteDataButton"
                app:layout_constraintEnd_toStartOf="@+id/deleteDataButton"
                app:layout_constraintTop_toTopOf="@+id/deleteDataButton" />


            <TextView
                android:id="@+id/sys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"

                android:textSize="20sp"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.303"
                app:layout_constraintStart_toEndOf="@+id/dia"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.367" />

            <TextView
                android:id="@+id/dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"

                android:textSize="20sp"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.169"
                app:layout_constraintStart_toEndOf="@+id/datetext"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.367" />

            <TextView
                android:id="@+id/datetext"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:text="TextView"

                android:textSize="22sp"
                android:typeface="monospace"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.067"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Systolic"
                app:layout_constraintBottom_toTopOf="@+id/sys"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.774"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.941" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Diastolic"
                app:layout_constraintEnd_toStartOf="@+id/textView20"
                app:layout_constraintHorizontal_bias="0.425"
                app:layout_constraintStart_toEndOf="@+id/datetext"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>