...
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <EditText
        android:id="@+id/upDia"
        android:layout_width="228dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="#ffffff"
        android:outlineAmbientShadowColor="@color/black"
...
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.843" />


    <Button
        android:id="@+id/upButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
...
